start of tic tac toe code

--- a/DC/tictactoe/css/style.css
+++ b/DC/tictactoe/css/style.css
@@ -1,4 +1,15 @@
 .boardpiece {
-height:300px;
+height:170px;
 background-color:skyblue;
+}
+
+.blinking{
+	animation:blinkingText 1.5s infinite;
+}
+@keyframes blinkingText{
+	0%{		color: #000;	}
+	49%{	color: transparent;	}
+	50%{	color: transparent;	}
+	99%{	color:transparent;	}
+	100%{	color: #000;	}
 }
